# isrf

./: .cruft.json  .gitignore  .readthedocs.yml  MANIFEST.in  README.rst  interactive.py  plotting.ipynb  pyproject.toml  test.py  testing.ipynb  tox.ini
docs/: conf.py  index.rst
docs/api/: ISRF.utils.galactic_to_cartesian.rst
isrf/: __init__.py  circle.py  config.py  dust_maps.py  general_settings.json  plot_utils.py  plotting.ipynb  ray.py  stars.py  testing.ipynb  testing_utils.py  utils.py
isrf/sources/spectra/: base_spectrum.py  blackbody.py  units.py
isrf/tests/: test_example.py
licenses/: LICENSE.rst
