[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "isrf"
description = "Calculating the galactic isrf in 3D"
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "Ioana A. Zelko", email = "ioana.zelko@gmail.com" },
]
dependencies = ["astropy","matplotlib","healpy"]
dynamic = ["version"]

[project.scripts]
open_astronomy_package_template_example = "isrf.example_mod:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]
[project.urls]
repository = "isrf_3D"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["isrf*"]
exclude = ["isrf._dev*"]

[tool.setuptools_scm]
version_file = "isrf/_version.py"

[tool.pytest.ini_options]
testpaths = [
  "isrf",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"
norecursedirs = ["isrf[\\/]_dev"]

[tool.coverage.run]
omit = [
 "isrf/__init*",
 "isrf/conftest.py",
 "isrf/*setup_package*",
 "isrf/tests/*",
 "isrf/*/tests/*",
 "isrf/extern/*",
 "isrf/version*",
 "*/isrf/__init*",
 "*/isrf/conftest.py",
 "*/isrf/*setup_package*",
 "*/isrf/tests/*",
 "*/isrf/*/tests/*",
 "*/isrf/extern/*",
 "*/isrf/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
